--- a/admin/scss/ie8.scss
+++ b/admin/scss/ie8.scss
@@ -1,3 +1,17 @@
+//fix for background colors on buttons
+.cms .ss-ui-button {
+	background-color: #e6e6e6;
+	&.ui-state-hover {
+			background-color:lighten(#e6e6e6, 5%);
+		}
+	&.ss-ui-action-constructive {
+		background-color:#669933;
+		&.ui-state-hover {
+			background-color:lighten(#669933, 5%);
+		}
+	}
+}
+
 .cms-panel {
 	.cms-panel-content-collapsed {
 		width: 40px;
